--- a/SecureRandom.NetCore/SecureRandom.NetCore.csproj
+++ b/SecureRandom.NetCore/SecureRandom.NetCore.csproj
@@ -2,11 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Timothy D Meadows II</Authors>
+    <Description>Implementation of a cryptographic pseudorandom number generator (CPRNG) using Blake2b. Optimized for PinnedMemory.</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/TimothyMeadows/SecureRandom.NetCore</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/TimothyMeadows/SecureRandom.NetCore</RepositoryUrl>
+    <RepositoryType>Github</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Blake2b.NetCore" Version="1.0.1" />
     <PackageReference Include="PinnedMemory" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
